added an example unit file, along with a number of includes

--- a/_units/00.md
+++ b/_units/00.md
@@ -1,6 +1,7 @@
 ---
 ###
-# unit information
+# unit information: 
+# Fill out with relevant information for this unit
 ###
 title: Title of the unit
 number: 0
@@ -14,51 +15,15 @@ test_questions:
  - question 2
 
 ###
-# page layout
+# page layout:
+# don't change
 ###
 layout: unit
 citations: ""
 ---
 
-{% include toc %}
+{% include unit_preamble.md %}
 
-# Sections
+# Section 1
 
-One hash followed by some text produces a section heading
-
-## Subsections
-
-Two hashes produce a subsection heading
-
-### Subsubsections
-
-Three hashes get you a subsubsection
-
-# Images
-
-## Markdown
-
-The Markdown syntax to place an image in the text looks like this:
-
-![Descriptive text](/MUTOR/assets/img/sin-amp-period.png)
-
-This will simply put an image at this location in the file, but we can use the syntax below 
-to include a figure number with a caption, so please don't use the raw markdown syntax for images.
-
-## Liquid
-
-This is the syntax to use for placing an image with a figure number and caption:
-
-{% include figure url="/MUTOR/assets/img/sin-amp-period.png" description="Descriptive text" %}
-
-See how nice that is??
-
-# Test questions and references
-
-Test questions and references will appear at the bottom of the unit in the order that they are listed in 
-the preamble above. Unfortunately, this is not a full-blown citation system like LaTeX includes, so if you want to refer to
-a particular reference by number inline in the text, you'll have to do it by hand [2].
-
-{% include cite ref="weisstein_fourier_transform" %}
-
-{% include references %}
+{% include unit_postamble.md %}
