--- a/_units/08.md
+++ b/_units/08.md
@@ -1,9 +1,10 @@
 ---
 ###
-# unit information
+# unit information: 
+# Fill out with relevant information for this unit
 ###
 title: Title of the unit
-number: 8
+number: 0
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
@@ -12,13 +13,17 @@ topics: [topic 1, topic 2]
 test_questions:
  - question 1
  - question 2
-references:
- - reference 1
- - reference 2
 
 ###
-# page layout
+# page layout:
+# don't change
 ###
 layout: unit
+citations: ""
 ---
 
+{% include unit_preamble.md %}
+
+# Section 1
+
+{% include unit_postamble.md %}
