--- a/_units/00.md
+++ b/_units/00.md
@@ -1,14 +1,14 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# This unit is about the types of research design in the field of music perception and cognition, with some practical information about how to get started in conducting your own music science research.
 ###
-title: Title of the unit
+title: Research Design and Methods
 number: 0
-short_description: short description of the unit
-summary: brief summary of the unit
+short_description: Research Design and Methods
+summary: Statistics, Quantitative and Qualitative Methods, Ethical principles of interdisciplinary research.
 authors: 
- - author 1
+ - Psyche Loui
 topics: [topic 1, topic 2]
 test_questions:
  - question 1
