Update 02.md: Auditory system
start unit 2 on auditory system

--- a/_units/02.md
+++ b/_units/02.md
@@ -1,18 +1,18 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Unit 2: Auditory System
 ###
-title: Title of the unit
+title: The Auditory System
 number: 0
-short_description: short description of the unit
-summary: brief summary of the unit
+short_description: Anatomy and physiology
+summary: The biological basis of hearing
 authors: 
- - author 1
+ - Psyche Loui
 topics: [topic 1, topic 2]
 test_questions:
- - question 1
- - question 2
+ - Lay out the way stations of the auditory pathway, from the cochlea to the primary auditory cortex.
+ - How does the central nervous system encode spatial location?
 
 ###
 # page layout:
@@ -24,6 +24,6 @@ citations: ""
 
 {% include unit_preamble.md %}
 
-# Section 1
-
+# How do we hear?
+The auditory system is a set of biological structures and functions that enable you to hear.
 {% include unit_postamble.md %}
