added mathjax: true to every unit page

--- a/_units/01.md
+++ b/_units/01.md
@@ -3,13 +3,13 @@
 # unit information: 
 # Fill out with relevant information for this unit
 ###
-title: Title of the unit
-number: 0
+title: The Auditory Stimulus
+number: 1
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1
-topics: [topic 1, topic 2]
+ - John MacCallum
+topics: []
 test_questions:
  - question 1
  - question 2
@@ -20,6 +20,7 @@ test_questions:
 ###
 layout: unit
 citations: ""
+mathjax: true
 ---
 
 {% include unit_preamble.md %}
