--- a/_units/07.md
+++ b/_units/07.md
@@ -1,14 +1,15 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Rhythm
 ###
-title: Title of the unit
+title: Rhythm
 number: 0
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1
+ - Psyche Loui
+ - John MacCallum
 topics: [topic 1, topic 2]
 test_questions:
  - question 1
@@ -25,6 +26,6 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# Rhythm
 
 {% include unit_postamble.md %}
