--- a/_units/10.md
+++ b/_units/10.md
@@ -1,9 +1,9 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Expectation
 ###
-title: Title of the unit
+title: Expectation and Prediction
 number: 0
 short_description: short description of the unit
 summary: brief summary of the unit
@@ -25,6 +25,22 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# EXPECTATION AND ANTICIPATION
+ 
+1.- introduction
+2.- expectancy?
+3.- why do we care?
+4.- theories of expectations
+            expectation arousal
+            expectation for melody
+            expectation for rhythm
+5.- methodes 
+            production paradigm
+            betting paradigm
+            comparative ethnomusicology 
+            reaction time paradigm 
+            head turn paradigm 
+            statistical learning
+            electro physiological studies  
 
 {% include unit_postamble.md %}
