--- a/_units/12.md
+++ b/_units/12.md
@@ -1,7 +1,7 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Music and Language 
 ###
 title: Title of the unit
 number: 0
@@ -25,6 +25,10 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# Music and Language 
+Phonology
+Syntax
+Semantics
+Prosody
 
 {% include unit_postamble.md %}
