--- a/_units/10.md
+++ b/_units/10.md
@@ -1,9 +1,9 @@
 ---
 ###
 # unit information: 
-# Expectation
+# Harmony
 ###
-title: Expectation and Prediction
+title: Harmony
 number: 0
 short_description: short description of the unit
 summary: brief summary of the unit
@@ -25,22 +25,6 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# EXPECTATION AND ANTICIPATION
- 
-1.- introduction
-2.- expectancy?
-3.- why do we care?
-4.- theories of expectations
-            expectation arousal
-            expectation for melody
-            expectation for rhythm
-5.- methodes 
-            production paradigm
-            betting paradigm
-            comparative ethnomusicology 
-            reaction time paradigm 
-            head turn paradigm 
-            statistical learning
-            electro physiological studies  
+# Harmony
 
 {% include unit_postamble.md %}
