--- a/_units/11.md
+++ b/_units/11.md
@@ -1,14 +1,14 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Expectation and Prediction
 ###
-title: Title of the unit
+title: Expectation and Prediction
 number: 0
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1
+ - Psyche Loui
 topics: [topic 1, topic 2]
 test_questions:
  - question 1
@@ -25,6 +25,49 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# Expectation and Prediction
+ 
+1.- introduction
+2.- expectancy?
+3.- why do we care?
+4.- theories of expectations
+            expectation arousal
+            expectation for melody
+            expectation for rhythm
+5.- methods 
+            production paradigm
+            betting paradigm
+            comparative ethnomusicology 
+            reaction time paradigm 
+            head turn paradigm 
+            statistical learning
+            electro physiological studies
+# Perception and action
+action perception: a forward model. 
+Feedforward and feedback loops. 
+      - role of cerebellum as error correction 
+     - guenther DIVA model
+# Amusia (Tone-deafness) 
+ - definitions
+ - vs. poor pitch singing
+ - psychometric methods 
+ - psychophysical methods
+ - MBEA and defining criteria
+ - learning and memory
+ - perception and production
+ - neuroimaging findings: VBM, cortical thickness, fMRI, DTI 
+# Emotion 
+What makes music emotional?
+Emotion and Meaning in Music by Leonard Meyer relates emotion to expectation
+Theories of emotion: valence and arousal, the circumplex model, emotions as prediction and reactive appraisal. ITPRA model. Huron’s and Kahneman’s system1 and system 2
+Emotion and bodily responses: causality? 
+Measuring psychophysiological responses to emotion: HR, GSR, pupillometry, 
+Emotion and reward system
+Music structure and emotional response: Some empirical findings
+     Appoggiatura —> Tears
+     Chord progressions —> Chills 
+Anatomically distinct dopamine release during anticipation and experience of peak emotion to music
+     Dopamine and reward system 
+
 
 {% include unit_postamble.md %}
