--- a/_units/00.md
+++ b/_units/00.md
@@ -25,6 +25,13 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# Research design & statistics
+How do we know? 
+Basic and applied research
+Experimental and quasi-experimental research
+Subjective and objective ratings
+Developmental methods
+Statistics: mean, SD, t-tests, ANOVAs
+
 
 {% include unit_postamble.md %}
