--- a/_units/02.md
+++ b/_units/02.md
@@ -27,4 +27,13 @@ mathjax: true
 
 # How do we hear?
 The auditory system is a set of biological structures and functions that enable you to hear.
+
+Hearing
+The auditory pathway (ear & brain) 
+Neural pathways, neural computation
+Plasticity 
+Absolute Pitch
+Effects of training
+Exceptional ability
+
 {% include unit_postamble.md %}
