fixed table and figure numbering

--- a/_units/01.md
+++ b/_units/01.md
@@ -5,14 +5,14 @@
 ###
 title: The Auditory Stimulus
 number: 1
-short_description: short description of the unit
-summary: brief summary of the unit
+short_description: Introduction to the physics of sound and its mathematical and digital representation.
+summary: What we experience as sound is really a response to small variations in pressure that affect our inner ear. In this unit, we will discuss the physical properties of these pressure waves and how they propagate through a medium (air). We will also discuss the mathematical and digital representations of these waves.
 authors: 
- - John MacCallum
-topics: []
+- John MacCallum
+topics: [Physics of Sound and its Representation]
 test_questions:
- - question 1
- - question 2
+- question 1
+- question 2
 
 ###
 # page layout:
