--- a/_units/02.md
+++ b/_units/02.md
@@ -26,14 +26,26 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # How do we hear?
-The auditory system is a set of biological structures and functions that enable you to hear.
+Much of our auditory and musical functions arise from the anatomical structures of our brain and auditory system. To understand the physiological bases of musical phenomena, this unit will provide an in-depth overview of the structure and function of the auditory system. 
 
-Hearing
-The auditory pathway (ear & brain) 
-Neural pathways, neural computation
-Plasticity 
-Absolute Pitch
-Effects of training
-Exceptional ability
+The auditory system is a set of biological structures and functions that enable you to hear. To understand this system, we will follow the pathway that sound travels from the outer ear to the cochlea. We will discuss how the cochlea transforms sound into neural impulses, which are then to be relayed in various transformations through the neural centers of the brainstem and midbrain before it is processed by the primary and secondary auditory cortices.
+
+In addition to feedforward pathways from the auditory periphery to the cerebral cortex (also known as afferent pathways), we will also consider efferent pathways, or feedback routes from the central nervous system to the auditory periphery, which support the view that hearing is not a passive state, but an activity that requires constant change and flexibility.
+
+To get a sense of the evolution of the auditory system, we will also compare the human auditory system with that of other animals, noting the commonalities and divergence points of the structures involved in hearing.
+
+Finally we look at when the auditory system malfunctions. Types of hearing loss and their origins will be discussed. We will consider the importance of hearing protection, and explore various ways to protect your ears.
+
+##The auditory pathway (ear & brain) 
+
+##Neural pathways, neural computation
+
+##Plasticity 
+
+##Absolute Pitch
+
+##Effects of training
+
+##Exceptional ability
 
 {% include unit_postamble.md %}
