--- a/_units/00.md
+++ b/_units/00.md
@@ -27,6 +27,61 @@ mathjax: true
 
 # Research design & statistics
 How do we know? 
+
+## Designing a research program
+Theory -> Question -> Hypothesis -> Research design -> Data -(back)-> Hypothesis
+
+## Variability & Variables
+- The power of sample size
+- The power of repeated measures
+
+## Variables
+*Dependent*: being measured (outcome)
+
+*Independent*: being manipulated
+
+*Hypothesis*: a predicted relationship between Independent Variable and Dependent Variable
+
+1. Nondirectional 
+1. Directional
+
+*Control*
+
+*Random*
+1. Random sampling - each member of a population is equally likely to be chosen 
+1. Advantage: Generalizability (external validity)
+1. Randomization with replacement
+1. Randomization with constraints 
+
+*Confounding variable*: any circumstance that changes systematically with the independent variable (Confound means puzzling)    
+
+Internal validity: whether the manipulated change in the independent variable caused the change in the dependent variable (or whether something else caused the change) 
+
+## Sources of bias:
+
+Sampling
+
+Mortality (dropout)
+
+Testing 
+
+Statistical regression
+
+External validity: Generalizability
+
+Designing a research program / Getting an idea (20 minutes: 10:40-11:00am)
+Research question: 
+- Repeatable
+- Observable
+- Testable
+Induction (reasoning): Observation —> Pattern —> Hypothesis —> Theory (specific to general)
+
+Deduction (reasoning): Theory —> Hypothesis —> Observation —> Confirmation (general to specific)
+
+Theories: can be Descriptive vs. Quantitative (vs. Analogical)
+
+> A good theory accounts for most of the data, is testable, is not too restrictive, has parsimony, and is able to predict the outcome of future experiments, and the best theories help answer ultimate questions (why questions) rather than just proximate questions (what questions). (David W. Martin, _Doing Psychology Experiments_)
+
 Basic and applied research
 Experimental and quasi-experimental research
 Subjective and objective ratings
