testing image upload 02.md

--- a/_units/02.md
+++ b/_units/02.md
@@ -47,8 +47,7 @@ brain and the spinal cord, and parts of the central nervous system involved in a
 An overview of the auditory periphery. (image source: http://hyperphysics.phy-astr.gsu.edu/Hbase/sound/ear.html)
 
 BrainstemPathways and
-An overview of the afferent auditory pathway in the central nervous system. (image source: UC Berkeley Psychology 117
-class lectures.)
+An overview of the afferent auditory pathway in the central nervous system. 
 
 # Structure vs Function
 
@@ -125,6 +124,7 @@ The cochlea is a coiled structure, contains the entire length of the basilar mem
 
 (image source: Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length.
 
+{% include figure url="MUTOR/MUTOR-1_0-CNMAT/unit3/bekesy.png" description="Descriptive text" %}
 (image source: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746)
 
 The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stirrup. The point of optimal excitation moved further away from the stirrup as the stimulus frequency decreased.
