--- a/_units/02.md
+++ b/_units/02.md
@@ -57,6 +57,7 @@ A detailed look at each anatomical region of the auditory system must include bo
 
 "The ear", for our purposes, is not just what sticks out on each side of your head. Although the visible part of the ear, also known as the pinna, constitutes the outer ear and plays an important role in hearing, TheEar also includes the middle, and inner ear, each of which has structures specialized for their functions. The middle ear has a series of ossicles, or tiny bones which conduct and amplify the sound signal. The inner ear is of vital importance to hearing as it includes the Cochlea, perhaps the most important structure in the auditory periphery, which transduces sound signals into nerve impulses.
 
+{% include figure url="/MUTOR/MUTOR-1_0-CNMAT/unit3/ear.gif" description="ear diagram" %}
 Overview of the ear, showing the outer, middle, and inner ear. (image source: Rossing et al, 2001)
    
 The outer ear includes the pinna, the visible portion of the ear coming out of the sides of the head. The pinna directs sound into the ear in a funnel-like manner, and the bony ridges of the pinna play an important role in sound localization. Sound waves approaching from the environment bounce off the bony ridges of the pinna such that the higher frequencies reflect off the bony ridges whereas the lower frequencies bend around the pinna. Using the information of how sounds are reflected along the pinna, localization of different frequencies is possible.
@@ -124,7 +125,7 @@ The cochlea is a coiled structure, contains the entire length of the basilar mem
 
 (image source: Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length.
 
-{% include figure url="MUTOR/MUTOR-1_0-CNMAT/unit3/bekesy.png" description="Descriptive text" %}
+{% include figure url="/MUTOR/MUTOR-1_0-CNMAT/unit3/bekesy.png" description="bekesy" %}
 (image source: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746)
 
 The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stirrup. The point of optimal excitation moved further away from the stirrup as the stimulus frequency decreased.
